[package]
name = "LuixPreview"
version = "0.1.0"
edition = "2021"

[dependencies]
# For the current version of the gtk4 crate see: https://crates.io/crates/gtk4
# To use the functionality of a specific gtk4 version, specify that using a feature
# To see the current gtk4 version installed on your system run pkg-config --modversion gtk4
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
